# cookiecutter-fastapi-sqlmodel-sveltekit-postgresql

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml
{{cookiecutter.project_slug}}/backend/: backend.dockerfile  start.sh
{{cookiecutter.project_slug}}/backend/app/: alembic.ini  pyproject.toml
{{cookiecutter.project_slug}}/backend/app/alembic/: env.py
{{cookiecutter.project_slug}}/backend/app/alembic/versions/: 7d741e6b9ad4_first_revision.py
{{cookiecutter.project_slug}}/backend/app/app/: backend_pre_start.py  initial_data.py  utils.py
{{cookiecutter.project_slug}}/backend/app/app/api/: deps.py
{{cookiecutter.project_slug}}/backend/app/app/api/api_v1/endpoints/: items.py  login.py  users.py  utils.py
{{cookiecutter.project_slug}}/backend/app/app/core/: config.py
{{cookiecutter.project_slug}}/backend/app/app/crud/: __init__.py  base.py  crud_item.py  crud_user.py
{{cookiecutter.project_slug}}/backend/app/app/db/: base.py  init_db.py  session.py
{{cookiecutter.project_slug}}/backend/app/app/models/: __init__.py  item.py  user.py
{{cookiecutter.project_slug}}/frontend/: .env  README.md  frontend.dockerfile  package-lock.json  package.json
{{cookiecutter.project_slug}}/frontend/src/: env.ts
{{cookiecutter.project_slug}}/frontend/src/routes/: +page.svelte
